test-cases/final-dump/error_mode.wybe
# if case

pub type tree { pub empty | node(left:tree, key:int, right:tree) }

pub def lookup(key:int, tree:tree, ?result:bool) {
    if { tree = empty:: ?result = false
       |  key = tree^tree.key:: ?result = true
       |  key < tree^tree.key:: lookup(key, tree^left, ?result) # mode error
       |  else:: lookup(key, tree^right, ?result)          # mode error
    }
}
